# zenith

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  LICENSE  README.md  build.rs
shaders/: CMakeLists.txt  colored_triangle.slang  gradient.comp  gradient_color.comp  gradient_color.slang  sky.comp  sky.slang  slide.comp
src/: CMakeLists.txt  VulkanEngine.cpp  VulkanEngine.hpp  VulkanInitializers.cpp  VulkanInitializers.hpp  VulkanTypes.hpp  lib.rs  main.cpp  main.rs  renderer.rs
src/engine/: CMakeLists.txt  deletion_queue.cpp  deletion_queue.hpp  descriptors.cpp  descriptors.hpp  engine.cpp  engine.hpp  pipelines.cpp  pipelines.hpp  types.hpp  util.cpp  util.hpp
src/renderer/: context.rs  deletion_queue.rs  descriptors.rs  framedata.rs  image.rs  loaders.rs  mod.rs  swapchain.rs  transitionable.rs  ui.rs  util.rs
