[package]
name = "zenith"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
ash = "0.38.0"
ash-window = "0.13.0"
bytemuck ={version = "1.22.0", features = ["derive"]}
glam = {version  ="0.30.1", features = ["bytemuck"]}
gpu-allocator = {version = "0.27.0", default-features = false, features = ["vulkan"]}
winit = "0.30.9"

# Ui
egui = "0.31.1"
egui-ash-renderer = {version = "0.8.0", features = ["dynamic-rendering"]}
egui-winit = "0.31.1"
